# sinottico-bio-wifi-minion-rotondi

./: .gitignore  Cargo.toml
src/: main.rs  model.rs
src/controller/: mblp.rs  mod.rs  serial.rs
src/view/: app.rs  mod.rs
