[package]
name = "sinottico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.18.1"
eframe = "0.18.0"
serialport = "4.0.1"
array-init = "2.0.0"
heapless = "0.7.11"
time = {version = "0.3.9", features = [ "formatting"]}
log = "0.4.16"
simplelog = "^0.10.0"